# python_call_c_ref

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
include/: c_api.h  c_lib.h  flat_route.h
pyextension/: c_api.py  flat_route.py
pytest/: c_api_test.py  flat_route_test.py
src/: c_api.c  flat_route.c  flat_route.cpp
test/: c_api_test.c  flat_route_test.c
